--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.16",
     "@google/genai": "^1.30.0",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "^5.19.1",
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.16.1",
     "lodash": "^4.17.21",
+    "mongodb": "^7.0.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.4",
@@ -44,7 +47,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "prisma": "^6.18.0",
+    "prisma": "^5.19.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
