--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "emoji-picker-react": "^4.16.1",
     "lodash": "^4.17.21",
     "mongodb": "^7.0.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.4",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
@@ -46,7 +46,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.7",
     "prisma": "^5.19.1",
     "tailwindcss": "^4",
     "typescript": "^5"
